--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 17 22:51:50 IST 2021
-sdk.dir=C\:\\Users\\ghosh\\AppData\\Local\\Android\\Sdk
+#Thu Feb 04 18:14:30 IST 2021
+sdk.dir=C\:\\Users\\Subhojit Paul\\AppData\\Local\\Android\\Sdk
