--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Feb 04 18:14:30 IST 2021
-sdk.dir=C\:\\Users\\Subhojit Paul\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\ghosh\\AppData\\Local\\Android\\Sdk
